user form fix, better readability for black theme disabled fields

--- a/src/app/shared/ui/buttons/form-buttons.component.css
+++ b/src/app/shared/ui/buttons/form-buttons.component.css
@@ -1,7 +1,7 @@
 .buttons {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
   gap: 1rem;
   width: 100%;
 }
